--- a/SomethingAboutCoding/C/.vscode/settings.json
+++ b/SomethingAboutCoding/C/.vscode/settings.json
@@ -2,6 +2,10 @@
     "files.associations": {
         "iterator": "cpp",
         "memory": "cpp",
-        "xutility": "cpp"
+        "xutility": "cpp",
+        "system_error": "cpp",
+        "xfunctional": "cpp",
+        "xlocmon": "cpp",
+        "xtr1common": "cpp"
     }
 }
