--- a/SomethingAboutCoding/C/.vscode/settings.json
+++ b/SomethingAboutCoding/C/.vscode/settings.json
@@ -6,6 +6,7 @@
         "system_error": "cpp",
         "xfunctional": "cpp",
         "xlocmon": "cpp",
-        "xtr1common": "cpp"
+        "xtr1common": "cpp",
+        "unordered_set": "cpp"
     }
 }
